my first commit

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tick-Tock Game</title> <!-- Wrong title -->
-  <link rel="stylesheet" href="./style.css"> <!-- Path corrected to match structure -->
+  <title>Tic-Tac-Toe Game</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <h2>Tick-Tock Game</h2> <!-- Wrong name -->
-  <div id="gamestatus">Player A's Turn</div> <!-- Non-standard player naming -->
-  <div id="bord"></div> <!-- Typo in ID -->
-
-  <script src="./script.js"></script> <!-- Correct path -->
+  <div id="game-container">
+    <h1 id="game-title">Tic-Tac-Toe</h1> <!-- Game title above the box -->
+    <div id="game-status">Player X's Turn</div>
+    <div id="board"></div>
+    <button id="play-again" style="display: none;">Play Again</button> <!-- Play Again button -->
+  </div>
+  <script src="./script.js"></script>
 </body>
 </html>
